fixed spacing on profile.ejs

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -56,3 +56,35 @@ html {
     color: white;
     text-decoration: none;
 }
+
+#profile {
+    background: url(imgs/bg3.jpg) no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+
+#profileSection {
+    background-color: rgba(167, 197, 181, 0.9);
+    color: white;
+    margin: auto;
+    width: 50%;
+    margin-top: 10%;
+    padding: 1% 0;
+    font-family: 'Bebas Neue', cursive;
+    font-size: 25px;
+}
+
+#centerOverride .col-6 {
+    margin-right: 0;
+    width: 100%;
+}
+
+ul.row.list-unstyled {
+    margin: auto;
+}
+
+#centerOverride.mt-5 {
+    margin-top: 1rem !important;
+}
